<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_ht"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColorHint="@color/black">

    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/result"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/modulo"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"

                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/modulo"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal"
            android:weightSum="8">


            <Button
                android:id="@+id/one"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/two"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/three"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/div"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/div"
                android:textColor="@color/black"

                android:textSize="@dimen/txt_size">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/four"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/five"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/six"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/sub"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/sub"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal"

            android:weightSum="8">

            <Button
                android:id="@+id/seven"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/eight"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/nine"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button

                android:id="@+id/plus"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/add"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"

            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/clear"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/clear"

                android:textColor="@color/black">

            </Button>

            <Button
                android:id="@+id/zero"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/dot"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>

            <Button
                android:id="@+id/mul"
                android:layout_width="@dimen/btn_wdt"
                android:layout_height="@dimen/btn_ht"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:onClick="operationfun"
                android:text="@string/mul"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size">

            </Button>


        </LinearLayout>



    </LinearLayout>

</RelativeLayout>