<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_ht"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/edit_text_margtop"
        android:layout_marginRight="@dimen/margin"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toTopOf="@+id/constr">

    </EditText>


        <Button
            android:id="@+id/result"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/result"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/one"
            app:layout_constraintRight_toLeftOf="@+id/modulo"
            app:layout_constraintLeft_toLeftOf="parent"


            >

        </Button>

        <Button
            android:id="@+id/modulo"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/modulo"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintLeft_toRightOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/div"
            app:layout_constraintRight_toRightOf="parent"
            >

        </Button>


    <Button
        android:id="@+id/one"
        android:layout_width="@dimen/btn_wdt"
        android:layout_height="@dimen/btn_ht"
        android:layout_marginRight="@dimen/margin"
        android:backgroundTint="@color/gray"
        android:onClick="operationfun"
        android:text="@string/one"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toLeftOf="@+id/two"
        app:layout_constraintBottom_toTopOf="@+id/four"
        >

    </Button>

    <Button
            android:id="@+id/two"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
        app:layout_constraintTop_toBottomOf="@+id/result"

        app:layout_constraintBottom_toTopOf="@+id/five"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"

            app:layout_constraintLeft_toRightOf="@+id/one"
            app:layout_constraintRight_toLeftOf="@+id/three">

        </Button>


        <Button
            android:id="@+id/div"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:layout_constraintBottom_toTopOf="@+id/sub"
            android:text="@string/div"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/three"
            app:layout_constraintRight_toRightOf="parent"
            >

        </Button>

        <Button
            android:id="@+id/three"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            app:layout_constraintTop_toBottomOf="@+id/modulo"
            app:layout_constraintBottom_toTopOf="@+id/six"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"

            app:layout_constraintLeft_toRightOf="@+id/two"
            app:layout_constraintRight_toLeftOf="@+id/div">

        </Button>




        <Button
            android:id="@+id/four"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/four"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/five"
            >

        </Button>

        <Button
            android:id="@+id/five"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/five"
            app:layout_constraintTop_toBottomOf="@id/two"
            app:layout_constraintBottom_toTopOf="@+id/eight"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"

            app:layout_constraintLeft_toRightOf="@+id/four"
            app:layout_constraintRight_toLeftOf="@+id/six">

        </Button>


        <Button
            android:id="@+id/sub"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintTop_toBottomOf="@+id/div"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"

            app:layout_constraintLeft_toRightOf="@+id/six"
            app:layout_constraintRight_toRightOf="parent"
            >

        </Button>

        <Button
            android:id="@+id/six"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/six"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/three"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            android:textSize="@dimen/txt_size"

            app:layout_constraintLeft_toRightOf="@+id/five"
            app:layout_constraintRight_toLeftOf="@+id/sub">

        </Button>




        <Button
            android:id="@+id/seven"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/seven"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/clear"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toLeftOf="@+id/eight"
            >

        </Button>

        <Button
            android:id="@+id/eight"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintTop_toBottomOf="@+id/five"

            app:layout_constraintLeft_toRightOf="@+id/seven"
            app:layout_constraintRight_toLeftOf="@+id/nine">

        </Button>


        <Button
            android:id="@+id/plus"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            app:layout_constraintBottom_toTopOf="@+id/mul"
            app:layout_constraintTop_toBottomOf="@+id/sub"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintLeft_toRightOf="@+id/nine"
            app:layout_constraintRight_toRightOf="parent"
            >

        </Button>

        <Button
            android:id="@+id/nine"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintTop_toBottomOf="@+id/six"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintLeft_toRightOf="@+id/eight"
            app:layout_constraintRight_toLeftOf="@+id/plus">

        </Button>





        <Button
            android:id="@+id/clear"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/clear"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/constr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/zero"
            >

        </Button>

        <Button
            android:id="@+id/zero"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintBottom_toBottomOf="@id/constr"
            app:layout_constraintTop_toBottomOf="@+id/eight"

            app:layout_constraintLeft_toRightOf="@+id/clear"
            app:layout_constraintRight_toLeftOf="@+id/dot">

        </Button>


        <Button
            android:id="@+id/mul"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"

            android:text="@string/mul"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plus"
            app:layout_constraintLeft_toRightOf="@+id/dot"
            app:layout_constraintRight_toRightOf="parent"
            >

        </Button>

        <Button
            android:id="@+id/dot"
            android:layout_width="@dimen/btn_wdt"
            android:layout_height="@dimen/btn_ht"
            android:layout_marginRight="@dimen/margin"
            android:backgroundTint="@color/gray"
            android:onClick="operationfun"
            android:text="@string/point"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/constr"
            android:textSize="@dimen/txt_size"
            app:layout_constraintTop_toBottomOf="@+id/nine"

            app:layout_constraintLeft_toRightOf="@+id/zero"
            app:layout_constraintRight_toLeftOf="@+id/mul">

        </Button>




</androidx.constraintlayout.widget.ConstraintLayout>